initial commit for render orthographics.

--- a/CameraToolsPlugin/CameraToolsPlugin.csproj
+++ b/CameraToolsPlugin/CameraToolsPlugin.csproj
@@ -127,6 +127,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\TaleSpire\TaleSpire_Data\Managed\Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.Rendering.Hybrid, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\TaleSpire\TaleSpire_Data\Managed\Unity.TextMeshPro.dll</HintPath>
@@ -386,6 +387,7 @@
   <ItemGroup>
     <Compile Include="CameraToolsPlugin.cs" />
     <Compile Include="ModdingUtil.cs" />
+    <Compile Include="Patches\OrthoCameraControllerPatch.cs" />
     <Compile Include="Patches\CameraControllerPatch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
