--- a/CameraToolsPlugin/CameraToolsPlugin.csproj
+++ b/CameraToolsPlugin/CameraToolsPlugin.csproj
@@ -386,6 +386,7 @@
     <Compile Include="ModdingUtil.cs" />
     <Compile Include="Patches\OrthoCameraControllerPatch.cs" />
     <Compile Include="Patches\CameraControllerPatch.cs" />
+    <Compile Include="Patches\scratch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
