--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: TaleSpire-Modding/doxygen-github-pages-action@latest
+      - uses: TaleSpire-Modding/doxygen-github-pages-action@v1.2.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
