--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -17,3 +17,4 @@ jobs:
           folder: docs/html
           config_file: Doxyfile
           manifest_file: manifest.json
+          project_location: CameraToolsPlugin
